Tweaked and added live installer

--- a/example_config/config.yaml
+++ b/example_config/config.yaml
@@ -13,7 +13,7 @@ Lora:
   Reset: 18
 
 GPS:
-  SerialPath: /dev/ttyAMA0
+  SerialPath: /dev/ttyS0
 
 Logging:
   LogLevel: info # debug, info, warn, error
